fix: Constant visible white borders in the trace spans

--- a/packages/jaeger-ui/src/components/common/CopyIcon.css
+++ b/packages/jaeger-ui/src/components/common/CopyIcon.css
@@ -17,17 +17,11 @@ limitations under the License.
 .CopyIcon,
 .CopyIcon:hover {
   background-color: transparent;
-  border: 1px solid inherit;
+  border: none;
   color: inherit;
   height: 100%;
   overflow: hidden;
   padding: 1px;
   font-size: 13px;
   margin-left: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-}
-
-.CopyIcon:focus {
-  background-color: rgba(255, 255, 255, 0.25);
-  color: inherit;
 }
